[package]
name = "task-tracker-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.5", features = ["trace"] }
uuid = { version = "1.x", features = ["v4", "v7", "serde"] }